<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddStudentActivity">

        <LinearLayout
            android:id="@+id/layout_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_student_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:startIconTint="@color/inputtextbackgroundcolor">

                    <EditText
                        android:id="@+id/et_student_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/student_id"
                        android:inputType="number"
                        android:textColor="@color/inputtextbackgroundcolor"
                        android:textColorHint="@color/inputtextbackgroundcolor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_confirm_student_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:startIconTint="@color/inputtextbackgroundcolor">

                    <EditText
                        android:id="@+id/et_confirm_student_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_student_id"
                        android:inputType="number"
                        android:textColor="@color/inputtextbackgroundcolor"
                        android:textColorHint="@color/inputtextbackgroundcolor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_student_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_outline2_person_24"
                app:startIconTint="@color/inputtextbackgroundcolor">

                <EditText
                    android:id="@+id/et_student_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/full_name"
                    android:textColor="@color/inputtextbackgroundcolor"
                    android:textColorHint="@color/inputtextbackgroundcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/gender" />

                <Spinner
                    android:id="@+id/sp_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:entries="@array/genderlist"
                    android:padding="8dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/branch" />

                <Spinner
                    android:id="@+id/sp_branch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:entries="@array/branchlist"
                    android:padding="8dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/department" />

                <Spinner
                    android:id="@+id/sp_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:entries="@array/departmentlist"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/level" />

                <Spinner
                    android:id="@+id/sp_grad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:entries="@array/gradlist"
                    android:padding="8dp" />


            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_addStudent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/bg_botton"
            android:text="@string/AddStudent"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/MainRedColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>